# notifications_sprint_1

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: main.yml
documentation/: Demands.md  Statement.md  notify.drawio
email_handler/: .env  pyproject.toml
email_handler/src/: main.py
email_handler/src/core/: add_queue.py  config.py  start_up.py
email_handler/src/db/: base.py
email_handler/src/db/rabbit/: callback.py  rabbitmq.py
email_handler/src/models/: notification.py
email_handler/src/sender/: email_sender.py
env_files/: api.env.example  email_handler.env.example  generator.env.example  history_db.env.example  notification_handler.env.example  notifications_db.env.example  scheduler.env.example  templates_db.env.example  worker.env.example
generator/: pyproject.toml
generator/src/: main.py
generator/src/core/: add_queue.py  settings.py  start_up.py
generator/src/db/: base.py
generator/src/db/mongo/: mongo.py
generator/src/db/postgres/: postgres.py
generator/src/db/rabbit/: callback.py  rabbitmq.py
generator/src/generator/: generator.py
generator/src/grpc/: auth_notify_pb2.py  auth_notify_pb2_grpc.py
generator/src/grpcs/: auth_notify_pb2.py  auth_notify_pb2_grpc.py
generator/src/models/: base.py  notifications.py  welcome_model.py
generator/src/protos/: auth_notify.proto
generator/src/services/: auth_data_client.py
history_db/docker-entrypoint-initdb.d/: init.sql
mongo/scripts/: init.dev.js  mongo_setup.sh
notification_api/: Dockerfile  pyproject.toml
notification_api/src/: main.py
notification_api/src/api/: health.py
notification_api/src/api/v1/: api.py  base.py
notification_api/src/api/v1/add_notification/: services.py  view.py
notification_api/src/api/v1/welcome_notification/: services.py  view.py
notification_api/src/core/: config.py  logger.py  openapi_docs.py  responses.py  serttings.py
notification_api/src/db/: rabbit.py
notification_api/src/models/: model_for_queue.py  models.py  new_series_models.py  orjson.py  response_models.py  welcome_models.py
notification_api/src/repositories/: base_repository.py  welcome_notification.py
notification_handler/: pyproject.toml
notification_handler/src/: main.py
notification_handler/src/core/: add_queue.py  config.py  logger.py  settings.py  start_up.py
notification_handler/src/db/: base.py  postgres.py  rabbitmq.py
notification_handler/src/db/postgres/: postgres.py
notification_handler/src/db/rabbit/: callback.py  rabbitmq.py
notification_handler/src/models/: notification.py
notification_handler/src/notification_handler/: notification_handler.py
notifications_db/docker-entrypoint-initdb.d/: init.sql
scheduler/: .dockerignore  Dockerfile  pyproject.toml
scheduler/src/: main.py
scheduler/src/core/: settings.py  start_up.py
scheduler/src/db/postgres/: postgres.py
scheduler/src/db/rabbit/: calback.py  rabbitmq.py
scheduler/src/models/: notifications.py
templates_db/docker-entrypoint-initdb.d/: init.sql
tests/integration/api/: conftest.py  docker-compose.yaml  rabbit_add_queue.py  requirements.txt  settings.py  test.env
tests/integration/api/fixtures/: mongo.py  (+2 more)
tests/integration/generator/: conftest.py  docker-compose.yaml  init_databases.py  requirements.txt  settings.py  test.env
tests/integration/notify_handler/: Dockerfile  conftest.py  docker-compose.yaml  rabbit_add_queue.py  requirements.txt  settings.py  test.env
tests/integration/worker/: Dockerfile  docker-compose.yaml  requirements.txt  test.env
users_db/: db_inint.sql
worker/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml
worker/dev/templates_db/docker-entrypoint-initdb.d/: init.sql
worker/src/: main.py  state_storage_file.json  worker_app.py
worker/src/brokers/: rabbit.py
worker/src/core/: builder.py  config.py  logger.py
worker/src/errors/: exceptions.py
worker/src/services/: consumer.py  email_publisher.py  email_render.py  history_publisher.py  query_loader.py  render.py  subscriber.py  template.py  templates_storage.py
worker/src/services/publishers/: email_publisher.py  history_publisher.py  publisher.py  push_publisher.py  queue_publisher.py  sms_publisher.py
worker/src/sql/: add_history.sql  tempate.sql
worker/src/workers/: email.py  history.py  push.py  sms.py  worker.py  worker_message.py
(+38 files in other folders)
