[tool.poetry]
name = "Notification Service"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"


[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = [
    "worker/src",
]
skip = ["notification_handler/src/main.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
exclude = [
    "venv",
    ".vscode",
]
files = "./**/*.py"
