[tool.poetry]
name = "email-handler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "email_handler"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
sendgrid = "^6.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
