[tool.poetry]
name = "email-handler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "email_handler"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
sendgrid = "^6.9.7"
backoff = "^2.2.1"
pydantic = "^1.10.4"
orjson = "^3.8.5"
wemake-python-styleguide = "0.17.0"
flake8-quotes = "3.3.1"
flake8-html = "^0.4.3"
mypy = "^0.991"
isort = "^5.11.4"
pre-commit = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
