[tool.poetry]
name = "notification api"
version = "0.1.0"
description = ""
authors = ["Alexey", "Alexey", "Ivan", "Artem"]
readme = "README.md"

[tool.poetry.dependencies]
backoff = "^2.2.1"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
orjson = "^3.8.3"
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
