[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
backoff = "^2.2.1"
orjson = "^3.8.3"
python = "^3.10"
pydantic = {version = "^1.10.4", extras = ["email"]}
pika = "^1.3.1"
psycopg = "^3.1.7"
psycopg-binary = "^3.1.6"
pymongo = "^4.3.3"
pyshorteners = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
