[tool.poetry]
name = "Worker"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pika = "^1.3.1"
cachetools = "^5.2.0"
jinja2 = "^3.1.2"
psycopg = {extras = ["binary"], version = "^3.1.7"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
